...
    let definition: String  // The definition of the term
}

struct GlossaryView: View {
    // Array of glossary terms
    let terms = [
        GlossaryTerm(term: "Monte Carlo Simulation",
                     definition: "A statistical technique that uses random sampling and statistical modeling to estimate the probability of different outcomes in a process that cannot easily be predicted due to the intervention of random variables."),
        GlossaryTerm(term: "Volatility",
                     definition: "A statistical measure of the dispersion of returns for a given security or market index. In the context of stock prices, it refers to the amount of uncertainty or risk about the size of changes in a stock's value."),
        GlossaryTerm(term: "Drift",
                     definition: "In finance, drift refers to the average expected return of an asset over time. It's often represented as the expected annual return in stock price models."),
        GlossaryTerm(term: "Geometric Brownian Motion",
                     definition: "A continuous-time stochastic process used in mathematical finance to model stock prices. It assumes that the percentage change in the stock price follows a normal distribution."),
        GlossaryTerm(term: "Confidence Interval",
...
